Relationship chart ids and help email

--- a/apps/dfda-1/tests/APIs/AggregateCorrelationApiTest-test_read_aggregate_correlations-test_read_aggregate_correlations.html
+++ b/apps/dfda-1/tests/APIs/AggregateCorrelationApiTest-test_read_aggregate_correlations-test_read_aggregate_correlations.html
@@ -73,7 +73,7 @@
     <nav id="primary-nav" class="site-nav animated drop">
       <ul>
                   <li>
-              <a href="mailto:mike@quantimo.do">
+              <a href="mailto:help@curedao.org">
                   <i class="fab fa-facebook-messenger"></i>&nbsp;
                   Contact Us
               </a>
@@ -365,8 +365,8 @@ class="join-study-button study-join-state-button">
     </div>
 </div>
 <div style="padding-top: 1rem; padding-bottom: 1rem;">
-    <h2 id="trait-correlation-between-bupropion-sr-intake-and-overall-mood" style="visibility: hidden; height: 0;">Trait Correlation Between Bupropion Sr Intake and Overall Mood</h2>
-    <div id="trait-correlation-between-bupropion-sr-intake-and-overall-mood-chart-container" style="height: 400px;"></div>
+    <h2 id="trait-relationship-between-bupropion-sr-intake-and-overall-mood" style="visibility: hidden; height: 0;">Trait Correlation Between Bupropion Sr Intake and Overall Mood</h2>
+    <div id="trait-relationship-between-bupropion-sr-intake-and-overall-mood-chart-container" style="height: 400px;"></div>
 <script type="text/javascript" defer>
 $(function(){
     Highcharts.theme = Highcharts.themes.white;
@@ -375,7 +375,7 @@ $(function(){
     "chart": {
         "type": "scatter",
         "zoomType": "xy",
-        "renderTo": "trait-correlation-between-bupropion-sr-intake-and-overall-mood-chart-container",
+        "renderTo": "trait-relationship-between-bupropion-sr-intake-and-overall-mood-chart-container",
         "plotBackgroundImage": false
     },
     "colors": [
@@ -393,9 +393,9 @@ $(function(){
     "divHeight": null,
     "exporting": {
         "enabled": true,
-        "filename": "trait-correlation-between-bupropion-sr-intake-and-overall-mood"
+        "filename": "trait-relationship-between-bupropion-sr-intake-and-overall-mood"
     },
-    "id": "trait-correlation-between-bupropion-sr-intake-and-overall-mood",
+    "id": "trait-relationship-between-bupropion-sr-intake-and-overall-mood",
     "lang": {
         "loading": ""
     },
@@ -2434,7 +2434,7 @@ class="bupropion-sr-variable-settings-state-button-1276 variable-settings-state-
                     <a class="social-icon" href="https://builder.quantimo.do">
                 <i class="fas fa-tools fa-2x" title="The App Builder allows anyone to create their own digital health app in minutes without any coding.  Their application can then also be built and released on iOS, Android, and as a Chrome browser extension. "></i>
             </a>
-                    <a class="social-icon" href="mailto:mike@quantimo.do">
+                    <a class="social-icon" href="mailto:help@curedao.org">
                 <i class="fab fa-facebook-messenger fa-2x" title="Contact Us"></i>
             </a>
                     <a class="social-icon" href="https://testing.quantimo.do/datalab">
