--- a/apps/dfda-1/tests/StagingUnitTests/A/AppSettings/MenuTest-testSearchMenu-MaterialStatCards.html
+++ b/apps/dfda-1/tests/StagingUnitTests/A/AppSettings/MenuTest-testSearchMenu-MaterialStatCards.html
@@ -1423,7 +1423,7 @@
                 </a>
             </div>
             <div class="card-stats-container" >
-                <a href="mailto:mike@quantimo.do" title="Contact Us" onclick="window.showLoader && showLoader()">
+                <a href="mailto:help@curedao.org" title="Contact Us" onclick="window.showLoader && showLoader()">
                     <div id="contact-us-card" class="card card-stats"
                         title="Contact Us">
                         <div class="card-header card-header-dark card-header-icon">
