--- a/apps/dfda-1/tests/StagingUnitTests/C/Studies/UserStudies/SoSimpleTest-testPopulationStudyShowHtml-study.html
+++ b/apps/dfda-1/tests/StagingUnitTests/C/Studies/UserStudies/SoSimpleTest-testPopulationStudyShowHtml-study.html
@@ -70,7 +70,7 @@
     <nav id="primary-nav" class="site-nav animated drop">
       <ul>
                   <li>
-              <a href="mailto:mike@quantimo.do">
+              <a href="mailto:help@curedao.org">
                   <i class="fab fa-facebook-messenger"></i>&nbsp;
                   Contact Us
               </a>
@@ -339,8 +339,8 @@ class="join-study-button study-join-state-button">
     </div>
 </div>
 <div style="padding-top: 1rem; padding-bottom: 1rem;">
-    <h2 id="trait-correlation-between-flax-oil-intake-and-alertness" style="visibility: hidden; height: 0;">Trait Correlation Between Flax Oil Intake and Alertness</h2>
-    <div id="trait-correlation-between-flax-oil-intake-and-alertness-chart-container" style="height: 400px;"></div>
+    <h2 id="trait-relationship-between-flax-oil-intake-and-alertness" style="visibility: hidden; height: 0;">Trait Correlation Between Flax Oil Intake and Alertness</h2>
+    <div id="trait-relationship-between-flax-oil-intake-and-alertness-chart-container" style="height: 400px;"></div>
 <script type="text/javascript" defer>
 $(function(){
     Highcharts.theme = Highcharts.themes.white;
@@ -348,7 +348,7 @@ $(function(){
     window.chart = new Highcharts.Chart({
     "chart": {
         "plotBackgroundImage": false,
-        "renderTo": "trait-correlation-between-flax-oil-intake-and-alertness-chart-container",
+        "renderTo": "trait-relationship-between-flax-oil-intake-and-alertness-chart-container",
         "type": "scatter",
         "zoomType": "xy"
     },
@@ -367,9 +367,9 @@ $(function(){
     "divHeight": null,
     "exporting": {
         "enabled": true,
-        "filename": "trait-correlation-between-flax-oil-intake-and-alertness"
+        "filename": "trait-relationship-between-flax-oil-intake-and-alertness"
     },
-    "id": "trait-correlation-between-flax-oil-intake-and-alertness",
+    "id": "trait-relationship-between-flax-oil-intake-and-alertness",
     "lang": {
         "loading": ""
     },
@@ -2005,8 +2005,8 @@ $(function(){
 </script>
 </div>
 <div style="padding-top: 1rem; padding-bottom: 1rem;">
-    <h2 id="correlation-between-flax-oil-and-alertness-by-duration-of-action" style="visibility: hidden; height: 0;">Correlation Between Flax Oil and Alertness by Duration of Action</h2>
-    <div id="correlation-between-flax-oil-and-alertness-by-duration-of-action-chart-container" style="height: 400px;"></div>
+    <h2 id="relationship-between-flax-oil-and-alertness-by-duration-of-action" style="visibility: hidden; height: 0;">Correlation Between Flax Oil and Alertness by Duration of Action</h2>
+    <div id="relationship-between-flax-oil-and-alertness-by-duration-of-action-chart-container" style="height: 400px;"></div>
 <script type="text/javascript" defer>
 $(function(){
     Highcharts.theme = Highcharts.themes.white;
@@ -2017,7 +2017,7 @@ $(function(){
             "duration": 0
         },
         "plotBackgroundImage": false,
-        "renderTo": "correlation-between-flax-oil-and-alertness-by-duration-of-action-chart-container",
+        "renderTo": "relationship-between-flax-oil-and-alertness-by-duration-of-action-chart-container",
         "type": "column",
         "zoomType": "xy"
     },
@@ -2036,9 +2036,9 @@ $(function(){
     "divHeight": null,
     "exporting": {
         "enabled": true,
-        "filename": "correlation-between-flax-oil-and-alertness-by-duration-of-action"
+        "filename": "relationship-between-flax-oil-and-alertness-by-duration-of-action"
     },
-    "id": "correlation-between-flax-oil-and-alertness-by-duration-of-action",
+    "id": "relationship-between-flax-oil-and-alertness-by-duration-of-action",
     "lang": {
         "loading": ""
     },
@@ -2137,8 +2137,8 @@ $(function(){
 </script>
 </div>
 <div style="padding-top: 1rem; padding-bottom: 1rem;">
-    <h2 id="correlation-between-flax-oil-and-alertness-by-onset-delay" style="visibility: hidden; height: 0;">Correlation Between Flax Oil and Alertness by Onset Delay</h2>
-    <div id="correlation-between-flax-oil-and-alertness-by-onset-delay-chart-container" style="height: 400px;"></div>
+    <h2 id="relationship-between-flax-oil-and-alertness-by-onset-delay" style="visibility: hidden; height: 0;">Correlation Between Flax Oil and Alertness by Onset Delay</h2>
+    <div id="relationship-between-flax-oil-and-alertness-by-onset-delay-chart-container" style="height: 400px;"></div>
 <script type="text/javascript" defer>
 $(function(){
     Highcharts.theme = Highcharts.themes.white;
@@ -2149,7 +2149,7 @@ $(function(){
             "duration": 0
         },
         "plotBackgroundImage": false,
-        "renderTo": "correlation-between-flax-oil-and-alertness-by-onset-delay-chart-container",
+        "renderTo": "relationship-between-flax-oil-and-alertness-by-onset-delay-chart-container",
         "type": "column",
         "zoomType": "xy"
     },
@@ -2168,9 +2168,9 @@ $(function(){
     "divHeight": null,
     "exporting": {
         "enabled": true,
-        "filename": "correlation-between-flax-oil-and-alertness-by-onset-delay"
+        "filename": "relationship-between-flax-oil-and-alertness-by-onset-delay"
     },
-    "id": "correlation-between-flax-oil-and-alertness-by-onset-delay",
+    "id": "relationship-between-flax-oil-and-alertness-by-onset-delay",
     "lang": {
         "loading": ""
     },
@@ -3725,7 +3725,7 @@ class="flax-oil-variable-settings-state-button-1319 variable-settings-state-butt
                     <a class="social-icon" href="https://builder.quantimo.do">
                 <i class="fas fa-tools fa-2x" title="The App Builder allows anyone to create their own digital health app in minutes without any coding.  Their application can then also be built and released on iOS, Android, and as a Chrome browser extension. "></i>
             </a>
-                    <a class="social-icon" href="mailto:mike@quantimo.do">
+                    <a class="social-icon" href="mailto:help@curedao.org">
                 <i class="fab fa-facebook-messenger fa-2x" title="Contact Us"></i>
             </a>
                     <a class="social-icon" href="https://staging.quantimo.do/datalab">
