--- a/apps/dfda-1/tests/UnitTests/Mail/EmailTest-testAndroidBuildEmail-AndroidBuildEmail.html
+++ b/apps/dfda-1/tests/UnitTests/Mail/EmailTest-testAndroidBuildEmail-AndroidBuildEmail.html
@@ -103,7 +103,7 @@
                                                                                                                                                                     <br>
 <p>If you need to make any changes, you can do so in the</p>
 <p><a href="https://builder.quantimo.do/#/app/configuration/oauth_test_client?clientId=oauth_test_client" title="" target="_self">APP BUILDER</a></p>
-<p>Please contact mike@quantimo.do if you need any help. </p>
+<p>Please contact help@curedao.org if you need any help. </p>
                                                             <br>
                                                             <br>
                                                                                                             </td>
@@ -570,7 +570,7 @@
     </a>&nbsp;
     |
     <a
-        href="mailto:mike@quantimo.do" target="_blank"
+        href="mailto:help@curedao.org" target="_blank"
         style="word-wrap: break-word;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;color: inherit;font-weight: normal;text-decoration: underline;"
     >
         CONTACT
