--- a/apps/dfda-1/tests/UnitTests/Models/StudiesPageTest-testGetStudiesPage-studies.html
+++ b/apps/dfda-1/tests/UnitTests/Models/StudiesPageTest-testGetStudiesPage-studies.html
@@ -71,7 +71,7 @@
     <nav id="primary-nav" class="site-nav animated drop">
       <ul>
                   <li>
-              <a href="mailto:mike@quantimo.do">
+              <a href="mailto:help@curedao.org">
                   <i class="fab fa-facebook-messenger"></i>&nbsp;
                   Contact Us
               </a>
@@ -551,7 +551,7 @@ class="vote-down-button">
                     <a class="social-icon" href="https://builder.quantimo.do">
                 <i class="fas fa-tools fa-2x" title="The App Builder allows anyone to create their own digital health app in minutes without any coding.  Their application can then also be built and released on iOS, Android, and as a Chrome browser extension. "></i>
             </a>
-                    <a class="social-icon" href="mailto:mike@quantimo.do">
+                    <a class="social-icon" href="mailto:help@curedao.org">
                 <i class="fab fa-facebook-messenger fa-2x" title="Contact Us"></i>
             </a>
                     <a class="social-icon" href="https://testing.quantimo.do/datalab">
