--- a/apps/dfda-1/tests/StagingUnitTests/C/Studies/UserStudies/SoSimpleTest-testUserStudyShowHtml-study.html
+++ b/apps/dfda-1/tests/StagingUnitTests/C/Studies/UserStudies/SoSimpleTest-testUserStudyShowHtml-study.html
@@ -70,7 +70,7 @@
     <nav id="primary-nav" class="site-nav animated drop">
       <ul>
                   <li>
-              <a href="mailto:mike@quantimo.do">
+              <a href="mailto:help@curedao.org">
                   <i class="fab fa-facebook-messenger"></i>&nbsp;
                   Contact Us
               </a>
@@ -789,8 +789,8 @@ $(function(){
 </script>
 </div>
 <div style="padding-top: 1rem; padding-bottom: 1rem;">
-    <h2 id="correlation-between-vyvanase-and-sickness-severity-by-duration-of-action" style="visibility: hidden; height: 0;">Correlation Between Vyvanase and Sickness Severity by Duration of Action</h2>
-    <div id="correlation-between-vyvanase-and-sickness-severity-by-duration-of-action-chart-container" style="height: 400px;"></div>
+    <h2 id="relationship-between-vyvanase-and-sickness-severity-by-duration-of-action" style="visibility: hidden; height: 0;">Correlation Between Vyvanase and Sickness Severity by Duration of Action</h2>
+    <div id="relationship-between-vyvanase-and-sickness-severity-by-duration-of-action-chart-container" style="height: 400px;"></div>
 <script type="text/javascript" defer>
 $(function(){
     Highcharts.theme = Highcharts.themes.white;
@@ -801,7 +801,7 @@ $(function(){
             "duration": 0
         },
         "plotBackgroundImage": false,
-        "renderTo": "correlation-between-vyvanase-and-sickness-severity-by-duration-of-action-chart-container",
+        "renderTo": "relationship-between-vyvanase-and-sickness-severity-by-duration-of-action-chart-container",
         "type": "column",
         "zoomType": "xy"
     },
@@ -820,9 +820,9 @@ $(function(){
     "divHeight": null,
     "exporting": {
         "enabled": true,
-        "filename": "correlation-between-vyvanase-and-sickness-severity-by-duration-of-action"
+        "filename": "relationship-between-vyvanase-and-sickness-severity-by-duration-of-action"
     },
-    "id": "correlation-between-vyvanase-and-sickness-severity-by-duration-of-action",
+    "id": "relationship-between-vyvanase-and-sickness-severity-by-duration-of-action",
     "lang": {
         "loading": ""
     },
@@ -919,8 +919,8 @@ $(function(){
 </script>
 </div>
 <div style="padding-top: 1rem; padding-bottom: 1rem;">
-    <h2 id="correlation-between-vyvanase-and-sickness-severity-by-onset-delay" style="visibility: hidden; height: 0;">Correlation Between Vyvanase and Sickness Severity by Onset Delay</h2>
-    <div id="correlation-between-vyvanase-and-sickness-severity-by-onset-delay-chart-container" style="height: 400px;"></div>
+    <h2 id="relationship-between-vyvanase-and-sickness-severity-by-onset-delay" style="visibility: hidden; height: 0;">Correlation Between Vyvanase and Sickness Severity by Onset Delay</h2>
+    <div id="relationship-between-vyvanase-and-sickness-severity-by-onset-delay-chart-container" style="height: 400px;"></div>
 <script type="text/javascript" defer>
 $(function(){
     Highcharts.theme = Highcharts.themes.white;
@@ -931,7 +931,7 @@ $(function(){
             "duration": 0
         },
         "plotBackgroundImage": false,
-        "renderTo": "correlation-between-vyvanase-and-sickness-severity-by-onset-delay-chart-container",
+        "renderTo": "relationship-between-vyvanase-and-sickness-severity-by-onset-delay-chart-container",
         "type": "column",
         "zoomType": "xy"
     },
@@ -950,9 +950,9 @@ $(function(){
     "divHeight": null,
     "exporting": {
         "enabled": true,
-        "filename": "correlation-between-vyvanase-and-sickness-severity-by-onset-delay"
+        "filename": "relationship-between-vyvanase-and-sickness-severity-by-onset-delay"
     },
-    "id": "correlation-between-vyvanase-and-sickness-severity-by-onset-delay",
+    "id": "relationship-between-vyvanase-and-sickness-severity-by-onset-delay",
     "lang": {
         "loading": ""
     },
@@ -4013,7 +4013,7 @@ class="charts-button">
                     <a class="social-icon" href="https://builder.quantimo.do">
                 <i class="fas fa-tools fa-2x" title="The App Builder allows anyone to create their own digital health app in minutes without any coding.  Their application can then also be built and released on iOS, Android, and as a Chrome browser extension. "></i>
             </a>
-                    <a class="social-icon" href="mailto:mike@quantimo.do">
+                    <a class="social-icon" href="mailto:help@curedao.org">
                 <i class="fab fa-facebook-messenger fa-2x" title="Contact Us"></i>
             </a>
                     <a class="social-icon" href="https://staging.quantimo.do/datalab">
