--- a/apps/dfda-1/tests/StagingUnitTests/D/Laravel/UserStudyWithoutEnoughMeasurementsTest-testUserStudyWithoutEnoughMeasurementsAsAdmin-admin.html
+++ b/apps/dfda-1/tests/StagingUnitTests/D/Laravel/UserStudyWithoutEnoughMeasurementsTest-testUserStudyWithoutEnoughMeasurementsAsAdmin-admin.html
@@ -73,7 +73,7 @@
     <nav id="primary-nav" class="site-nav animated drop">
       <ul>
                   <li>
-              <a href="mailto:mike@quantimo.do">
+              <a href="mailto:help@curedao.org">
                   <i class="fab fa-facebook-messenger"></i>&nbsp;
                   Contact Us
               </a>
@@ -2560,7 +2560,7 @@ I generally need about a month of varying data that overlaps with varying data f
                     <a class="social-icon" href="https://builder.quantimo.do">
                 <i class="fas fa-tools fa-2x" title="The App Builder allows anyone to create their own digital health app in minutes without any coding.  Their application can then also be built and released on iOS, Android, and as a Chrome browser extension. "></i>
             </a>
-                    <a class="social-icon" href="mailto:mike@quantimo.do">
+                    <a class="social-icon" href="mailto:help@curedao.org">
                 <i class="fab fa-facebook-messenger fa-2x" title="Contact Us"></i>
             </a>
                     <a class="social-icon" href="https://staging.quantimo.do/datalab">
