--- a/apps/dfda-1/tests/StagingUnitTests/D/Laravel/V2StudyTest-testStudyAsRegularUser-user.html
+++ b/apps/dfda-1/tests/StagingUnitTests/D/Laravel/V2StudyTest-testStudyAsRegularUser-user.html
@@ -73,7 +73,7 @@
     <nav id="primary-nav" class="site-nav animated drop">
       <ul>
                   <li>
-              <a href="mailto:mike@quantimo.do">
+              <a href="mailto:help@curedao.org">
                   <i class="fab fa-facebook-messenger"></i>&nbsp;
                   Contact Us
               </a>
@@ -387,8 +387,8 @@ class="join-study-button study-join-state-button">
     </div>
 </div>
 <div style="padding-top: 1rem; padding-bottom: 1rem;">
-    <h2 id="trait-correlation-between-flaxseed-oil-intake-and-excitability" style="visibility: hidden; height: 0;">Trait Correlation Between Flaxseed Oil Intake and Excitability</h2>
-    <div id="trait-correlation-between-flaxseed-oil-intake-and-excitability-chart-container" style="height: 400px;"></div>
+    <h2 id="trait-relationship-between-flaxseed-oil-intake-and-excitability" style="visibility: hidden; height: 0;">Trait Correlation Between Flaxseed Oil Intake and Excitability</h2>
+    <div id="trait-relationship-between-flaxseed-oil-intake-and-excitability-chart-container" style="height: 400px;"></div>
 <script type="text/javascript" defer>
 $(function(){
     Highcharts.theme = Highcharts.themes.white;
@@ -397,7 +397,7 @@ $(function(){
     "chart": {
         "type": "scatter",
         "zoomType": "xy",
-        "renderTo": "trait-correlation-between-flaxseed-oil-intake-and-excitability-chart-container",
+        "renderTo": "trait-relationship-between-flaxseed-oil-intake-and-excitability-chart-container",
         "plotBackgroundImage": false
     },
     "colors": [
@@ -415,9 +415,9 @@ $(function(){
     "divHeight": null,
     "exporting": {
         "enabled": true,
-        "filename": "trait-correlation-between-flaxseed-oil-intake-and-excitability"
+        "filename": "trait-relationship-between-flaxseed-oil-intake-and-excitability"
     },
-    "id": "trait-correlation-between-flaxseed-oil-intake-and-excitability",
+    "id": "trait-relationship-between-flaxseed-oil-intake-and-excitability",
     "lang": {
         "loading": ""
     },
@@ -1877,8 +1877,8 @@ $(function(){
 </script>
 </div>
 <div style="padding-top: 1rem; padding-bottom: 1rem;">
-    <h2 id="correlation-between-flaxseed-oil-and-excitability-by-duration-of-action" style="visibility: hidden; height: 0;">Correlation Between Flaxseed Oil and Excitability by Duration of Action</h2>
-    <div id="correlation-between-flaxseed-oil-and-excitability-by-duration-of-action-chart-container" style="height: 400px;"></div>
+    <h2 id="relationship-between-flaxseed-oil-and-excitability-by-duration-of-action" style="visibility: hidden; height: 0;">Correlation Between Flaxseed Oil and Excitability by Duration of Action</h2>
+    <div id="relationship-between-flaxseed-oil-and-excitability-by-duration-of-action-chart-container" style="height: 400px;"></div>
 <script type="text/javascript" defer>
 $(function(){
     Highcharts.theme = Highcharts.themes.white;
@@ -1887,7 +1887,7 @@ $(function(){
     "chart": {
         "type": "column",
         "zoomType": "xy",
-        "renderTo": "correlation-between-flaxseed-oil-and-excitability-by-duration-of-action-chart-container",
+        "renderTo": "relationship-between-flaxseed-oil-and-excitability-by-duration-of-action-chart-container",
         "plotBackgroundImage": false,
         "animation": {
             "duration": 0
@@ -1908,9 +1908,9 @@ $(function(){
     "divHeight": null,
     "exporting": {
         "enabled": true,
-        "filename": "correlation-between-flaxseed-oil-and-excitability-by-duration-of-action"
+        "filename": "relationship-between-flaxseed-oil-and-excitability-by-duration-of-action"
     },
-    "id": "correlation-between-flaxseed-oil-and-excitability-by-duration-of-action",
+    "id": "relationship-between-flaxseed-oil-and-excitability-by-duration-of-action",
     "lang": {
         "loading": ""
     },
@@ -2010,8 +2010,8 @@ $(function(){
 </script>
 </div>
 <div style="padding-top: 1rem; padding-bottom: 1rem;">
-    <h2 id="correlation-between-flaxseed-oil-and-excitability-by-onset-delay" style="visibility: hidden; height: 0;">Correlation Between Flaxseed Oil and Excitability by Onset Delay</h2>
-    <div id="correlation-between-flaxseed-oil-and-excitability-by-onset-delay-chart-container" style="height: 400px;"></div>
+    <h2 id="relationship-between-flaxseed-oil-and-excitability-by-onset-delay" style="visibility: hidden; height: 0;">Correlation Between Flaxseed Oil and Excitability by Onset Delay</h2>
+    <div id="relationship-between-flaxseed-oil-and-excitability-by-onset-delay-chart-container" style="height: 400px;"></div>
 <script type="text/javascript" defer>
 $(function(){
     Highcharts.theme = Highcharts.themes.white;
@@ -2020,7 +2020,7 @@ $(function(){
     "chart": {
         "type": "column",
         "zoomType": "xy",
-        "renderTo": "correlation-between-flaxseed-oil-and-excitability-by-onset-delay-chart-container",
+        "renderTo": "relationship-between-flaxseed-oil-and-excitability-by-onset-delay-chart-container",
         "plotBackgroundImage": false,
         "animation": {
             "duration": 0
@@ -2041,9 +2041,9 @@ $(function(){
     "divHeight": null,
     "exporting": {
         "enabled": true,
-        "filename": "correlation-between-flaxseed-oil-and-excitability-by-onset-delay"
+        "filename": "relationship-between-flaxseed-oil-and-excitability-by-onset-delay"
     },
-    "id": "correlation-between-flaxseed-oil-and-excitability-by-onset-delay",
+    "id": "relationship-between-flaxseed-oil-and-excitability-by-onset-delay",
     "lang": {
         "loading": ""
     },
@@ -3437,7 +3437,7 @@ class="flaxseed-oil-variable-settings-state-button-53530 variable-settings-state
                     <a class="social-icon" href="https://builder.quantimo.do">
                 <i class="fas fa-tools fa-2x" title="The App Builder allows anyone to create their own digital health app in minutes without any coding.  Their application can then also be built and released on iOS, Android, and as a Chrome browser extension. "></i>
             </a>
-                    <a class="social-icon" href="mailto:mike@quantimo.do">
+                    <a class="social-icon" href="mailto:help@curedao.org">
                 <i class="fab fa-facebook-messenger fa-2x" title="Contact Us"></i>
             </a>
                     <a class="social-icon" href="https://staging.quantimo.do/datalab">
