--- a/apps/dfda-1/tests/UnitTests/Mail/EmailTest-testChromeEmail-ChromeExtensionEmail.html
+++ b/apps/dfda-1/tests/UnitTests/Mail/EmailTest-testChromeEmail-ChromeExtensionEmail.html
@@ -434,7 +434,7 @@
     </a>&nbsp;
     |
     <a
-        href="mailto:mike@quantimo.do" target="_blank"
+        href="mailto:help@curedao.org" target="_blank"
         style="word-wrap: break-word;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;color: inherit;font-weight: normal;text-decoration: underline;"
     >
         CONTACT
