User Variable Relationships

--- a/apps/dfda-1/tests/SlimTests/Analytics/StudyTest-testPostAndGetUserStudy-correlationScatterPlot.html
+++ b/apps/dfda-1/tests/SlimTests/Analytics/StudyTest-testPostAndGetUserStudy-correlationScatterPlot.html
@@ -384,7 +384,7 @@ $(function(){
             return this.y +'% EffectVariableName<br/>'+this.x +'mg CauseVariableName';
         }
     },
-    "type": "User Correlation Scatter Plot",
+    "type": "User Variable Relationship Scatter Plot",
     "useHighStocks": false,
     "xAxis": {
         "title": {
