--- a/apps/dfda-1/tests/StagingUnitTests/A/Correlations/UserCorrelations/ChartHtmlForCorrelationWithoutEnoughDataTest-testChartHtmlForCorrelationWithoutEnoughData-DynamicCharts.html
+++ b/apps/dfda-1/tests/StagingUnitTests/A/Correlations/UserCorrelations/ChartHtmlForCorrelationWithoutEnoughDataTest-testChartHtmlForCorrelationWithoutEnoughData-DynamicCharts.html
@@ -3425,7 +3425,7 @@ $(function(){
             return this.y +'/5 Alertness<br/>'+this.x +'g Fat Intake';
         }
     },
-    "type": "User Correlation Scatter Plot",
+    "type": "User Variable Relationship Scatter Plot",
     "useHighStocks": false,
     "xAxis": {
         "title": {
