--- a/apps/dfda-1/tests/StagingUnitTests/C/Studies/GetUserStudyWithoutPreExistingCorrelationTest-testDeleteCorrelationAndGetStudy-non-existent-study.html
+++ b/apps/dfda-1/tests/StagingUnitTests/C/Studies/GetUserStudyWithoutPreExistingCorrelationTest-testDeleteCorrelationAndGetStudy-non-existent-study.html
@@ -11047,7 +11047,7 @@ $(function(){
             return this.y +'/5 Overall Mood<br/>'+this.x +'index Body Mass Index Or BMI';
         }
     },
-    "type": "User Correlation Scatter Plot",
+    "type": "User Variable Relationship Scatter Plot",
     "useHighStocks": false,
     "xAxis": {
         "title": {
