--- a/apps/dfda-1/tests/StagingUnitTests/D/Laravel/V2StudyTest-testStudyAsAdmin-admin.html
+++ b/apps/dfda-1/tests/StagingUnitTests/D/Laravel/V2StudyTest-testStudyAsAdmin-admin.html
@@ -841,7 +841,7 @@ $(function(){
             return this.y +'/5 Excitability<br/>'+this.x +'mg Flaxseed Oil';
         }
     },
-    "type": "User Correlation Scatter Plot",
+    "type": "User Variable Relationship Scatter Plot",
     "useHighStocks": false,
     "xAxis": {
         "title": {
