Chrome extension manifest, docs, cleaned up dependencies, fixed static asset server

--- a/apps/dfda-1/public/app/public/android_popup.html
+++ b/apps/dfda-1/public/app/public/android_popup.html
@@ -98,9 +98,12 @@
             }
         </style>
         <!--suppress HtmlUnknownTarget -->
-        <script src="cordova.js"></script>
+<!--        <script src="cordova.js"></script>-->
         <!-- build:js scripts/popup-combined-head-libraries.js -->
         <script src="https://static.quantimo.do/lib/q/q.js"></script>
+        <script type="text/javascript"
+                src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment-with-locales.min.js"></script>
+
         <script src="https://static.quantimo.do/lib/bugsnag/dist/bugsnag.js"></script>
         <script src="lib/quantimodo/quantimodo-web.js"></script>
         <script src="https://static.quantimo.do/lib/localforage/dist/localforage.js"></script>
