Chrome extension build script, doc, and fixes

--- a/apps/dfda-1/public/app/public/index.html
+++ b/apps/dfda-1/public/app/public/index.html
@@ -26,6 +26,7 @@
       <link rel="shortcut icon"
             href="img/icons/icon_16.png">
       <!-- build:js scripts/combined-head-libraries.js -->
+      <script src="https://static.quantimo.do/lib/q/q.js"></script>
       <script defer src="https://static.quantimo.do/lib/bugsnag/dist/bugsnag.js"></script>
       <script src="js/psychedelic-loader-ionic.js"></script>
 	  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/89/three.min.js"></script>
@@ -156,7 +157,7 @@
     <script defer src="https://static.quantimo.do/lib/pouchdb/dist/pouchdb.min.js"></script>
     <script defer src="https://static.quantimo.do/lib/pouchdb-upsert/dist/pouchdb.upsert.js"></script>
     <script defer src="https://static.quantimo.do/lib/quagga/dist/quagga.js"></script>
-    <script defer src="https://static.quantimo.do/lib/q/q.js"></script>
+
     <script defer src="https://static.quantimo.do/lib/compromise/builds/compromise.js"></script> <!-- compromise produces errors when minified for some reason -->
     <script defer src="https://static.quantimo.do/lib/Bravey/build/bravey.js"></script> <!-- Bravey produces errors when minified for some reason -->
         <script async src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
