Extract robot-themed CSS to separate file
The robot-themed CSS styles were isolated from the main app.css and moved into a new, dedicated file named robot.css. This change was made to increase code maintainability and readability by segregating specific themed styles into separate CSS files. It also improves the structure of the project's CSS, making it easier to manage themes or specific feature styles.

--- a/apps/dfda-1/public/app/public/index.html
+++ b/apps/dfda-1/public/app/public/index.html
@@ -17,6 +17,7 @@
     <link href="https://fonts.googleapis.com/css?family=Yellowtail" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Yellowtail" rel="stylesheet">
     <link href="css/study.css" rel="stylesheet">
+      <link href="css/robot.css" rel="stylesheet">
       <link rel="manifest" href="manifest.json">
       <!-- build:css css/combined.css -->
       <!-- endbuild -->
