Update UI components and OAuth links
The update modifies several UI components, including tab labels and UI presentation of apps when none exists. OAuth links in 'oauth-card.html' file were updated to include additional parameters. Also, the wording visible to users in 'app-links.html' has been updated. This commit further refines the user experience and the functionality of the service.

--- a/apps/dfda-1/public/app/public/builder-templates/app-design-tabs-fragment.html
+++ b/apps/dfda-1/public/app/public/builder-templates/app-design-tabs-fragment.html
@@ -9,6 +9,9 @@
     </div>
 </md-toolbar>
 <md-tabs md-dynamic-height md-border-bottom>
+    <md-tab label="Misc" ng-click="">
+        <div ng-include="'builder-templates/design-components/misc-design-settings.html'"></div>
+    </md-tab>
     <md-tab label="Menu" ng-click="">
         <div ng-include="'builder-templates/design-components/menu-designer.html'"></div>
     </md-tab>
