--- a/apps/dfda-1/public/app/public/builder-templates/app-links.html
+++ b/apps/dfda-1/public/app/public/builder-templates/app-links.html
@@ -32,7 +32,8 @@
                      class="md-avatar"/>
                 <div class="md-list-item-text">
                     <h4>{{ appSettings.appDesign.aliases.active.physicianAlias | camelCaseToTitleCase }} Dashboard</h4>
-                    <p>{{ appSettings.additionalSettings.downloadLinks.descriptions.physicianDashboard }}</p>
+                    <p>Get an authorization url to share with clients, allowing them to review and 
+                       analyze their data.</p>
                 </div>
                 <md-button class="md-secondary md-icon-button" style="font-size: 30px;" target="_blank"
                            ng-href="{{appSettings.additionalSettings.downloadLinks.physicianDashboard}}"
@@ -47,7 +48,7 @@
                      class="md-avatar"/>
                 <div class="md-list-item-text">
                     <h4>End-User Web App</h4>
-                    <p>{{ appSettings.additionalSettings.downloadLinks.descriptions.webApp }}</p>
+                    <p>"Here people can import data from other apps and devices, manually record diet, symptoms, treatments and anything else.  Then they can explore their data to find new ways to improve their lives.</p>
                 </div>
                 <md-button class="md-secondary md-icon-button" style="font-size: 30px;" target="_blank"
                            ng-href="{{appSettings.additionalSettings.downloadLinks.webApp}}" aria-label="open">
