--- a/apps/dfda-1/public/app/public/builder-templates/configuration.html
+++ b/apps/dfda-1/public/app/public/builder-templates/configuration.html
@@ -19,24 +19,20 @@
             </iframe>
         </div>
         <div id="app-builder" ng-if="!patientUser" style="max-height: 100%">
-            <div ng-if="!appList" ng-cloak>
-                <br> <br>
-                <h1 style="text-align: center;" class="pulsating-glowing-text">Loading your apps.. </h1>
-                <br>
-                <div style="text-align: center"><br>
-                    <ion-spinner icon="android"></ion-spinner>
-                    <br></div>
-            </div>
-            <div ng-if="appList && appList.length === 0">
-                <md-button class="icon icon-left ion-plus-round" ng-click="openNewAppModalPopup()">&nbsp; Create New
-                    App
-                </md-button>
+            <div ng-if="appList && appList.length === 0" style="margin-top: 50px;">
+                <div style="text-align: center;">
+                    <md-button class="md-raised md-primary icon icon-left ion-plus-round" 
+                               ng-click="openNewAppModalPopup()" style="margin: 0 auto;">
+                        &nbsp; Create New App
+                    </md-button>
+                </div>
             </div>
             <div ng-if="appList && appList.length" ng-cloak>
                 <md-content>
                     <md-toolbar>
                         <div class="md-toolbar-tools">
-                            <md-progress-linear md-mode="indeterminate" ng-if="!appList"></md-progress-linear>
+<!--                            <md-progress-linear md-mode="indeterminate" 
+                                                ng-if="!appList || state.loading"></md-progress-linear>-->
                             <md-select style="color: white; line-height: normal;" ng-model="appSettings"
                                        ng-model-options="{trackBy: '$value.clientId'}" aria-label="appList"
                                        ng-change="switchApp(appSettings)" ng-if="appList && appList.length > 1">
@@ -60,7 +56,9 @@
                             </md-button>
                         </div>
                     </md-toolbar>
-                    <md-tabs ng-if="!patientUser" md-dynamic-height md-border-bottom>
+	                <md-progress-linear md-mode="indeterminate"
+	                                    ng-if="state.loading"></md-progress-linear>
+                    <md-tabs ng-if="!patientUser && !state.loading" md-dynamic-height md-border-bottom>
                         <md-tab label="Links">
                             <md-content class="md-padding">
                                 <!--<div ng-include="'builder-templates/app-design-list-fragment.html'"></div>-->
@@ -71,7 +69,7 @@
                             </md-content>
                         </md-tab>
 <!--                        <md-tab label="API" style="height: 100%; width: 100%; ">
-                            <iframe ng-src="api-docs.html"
+                            <iframe ng-public="api-docs.html"
                                     data-tap-disabled="true" style="height: 100%; width: 100%; position: absolute;"
                                     frameborder="0">
                             </iframe>
@@ -104,6 +102,14 @@
                         </md-tab>
                     </md-tabs>
                 </md-content>
+            </div>
+            <div ng-if="state.loading" ng-cloak>
+                <br> <br>
+                <h1 style="text-align: center;" class="pulsating-glowing-text">Loading your apps.. </h1>
+                <br>
+                <div style="text-align: center"><br>
+                    <ion-spinner icon="android"></ion-spinner>
+                    <br></div>
             </div>
             <!--<md-button class="md-raised md-primary" ng-click="undoPostAppSettings($event)">Undo</md-button>-->
         </div>
