--- a/apps/dfda-1/public/app/public/index.html
+++ b/apps/dfda-1/public/app/public/index.html
@@ -15,7 +15,9 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Orbitron:400,700,900" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Yellowtail" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Yellowtail" rel="stylesheet">
+      <link rel="preconnect" href="https://fonts.googleapis.com">
+      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+      <link href="https://fonts.googleapis.com/css2?family=Michroma&family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700&display=swap" rel="stylesheet">
     <link href="css/study.css" rel="stylesheet">
       <link href="css/robot.css" rel="stylesheet">
       <link rel="manifest" href="manifest.json">
@@ -160,7 +162,7 @@
     <script defer src="https://static.quantimo.do/lib/pouchdb/dist/pouchdb.min.js"></script>
     <script defer src="https://static.quantimo.do/lib/pouchdb-upsert/dist/pouchdb.upsert.js"></script>
     <script defer src="https://static.quantimo.do/lib/quagga/dist/quagga.js"></script>
-    <script defer src="https://static.quantimo.do/lib/q/q.js"></script
+    <script defer src="https://static.quantimo.do/lib/q/q.js"></script>
     <script defer src="https://static.quantimo.do/lib/compromise/builds/compromise.js"></script> <!-- compromise produces errors when minified for some reason -->
     <script defer src="https://static.quantimo.do/lib/Bravey/build/bravey.js"></script> <!-- Bravey produces errors when minified for some reason -->
         <script async src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
