--- a/apps/dfda-1/public/app/public/index.html
+++ b/apps/dfda-1/public/app/public/index.html
@@ -70,6 +70,7 @@
     <script async src="js/controllers/favoritesCtrl.js"></script>
     <script src="js/controllers/introCtrl.js"></script>
 	  <script src="data/slides-v1.js"></script>
+      <script src="data/slides-convo.js"></script>
 	  <script src="js/controllers/presentationCtrl.js"></script>
     <!--<script src="js/controllers/fabric.js"></script> Not sure if this does anything.  We might want to enable for native error logging sometime. -->
     <script src="js/controllers/variableSettingsCtrl.js"></script>
