Add `AnalyzingCtrl` controller and related changes
Introduced a new `AnalyzingCtrl` to the application. Updated `index.html` to include the new controller script. Made several modifications in the `presentation.html` template such as adding new canvas elements and a few control buttons. Also added two new files: `analyzingCtrl.js`, which defines the new controller, and `analyzing-page.html`, a new template associated with the controller.

--- a/apps/dfda-1/public/app/public/index.html
+++ b/apps/dfda-1/public/app/public/index.html
@@ -91,6 +91,7 @@
     <script src="js/controllers/tagAddCtrl.js"></script>
     <script src="js/controllers/chartsPageCtrl.js"></script>
     <script src="js/controllers/studyCtrl.js"></script>
+      <script src="js/controllers/analyzingCtrl.js"></script>
     <script async src="js/controllers/mapCtrl.js"></script>
     <script src="js/controllers/onboardingCtrl.js"></script>
     <script async src="js/controllers/upgradeCtrl.js"></script>
