Add support for human representation and talking feature
The update introduces a human representation by adding a new human container, head, body, and mouth in the UI. It also includes the addition of a new talking feature for the human representation supported by speech synthesis. Moreover, CSS styles and an ignore rule for public video directory have been added. A new public CSS file for closed-captioning is incorporated as well.

--- a/apps/dfda-1/public/app/public/index.html
+++ b/apps/dfda-1/public/app/public/index.html
@@ -20,6 +20,8 @@
       <link href="https://fonts.googleapis.com/css2?family=Michroma&family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700&display=swap" rel="stylesheet">
     <link href="css/study.css" rel="stylesheet">
       <link href="css/robot.css" rel="stylesheet">
+      <link href="css/human.css" rel="stylesheet">
+      <link href="css/closed-captioning.css" rel="stylesheet">
       <link rel="manifest" href="manifest.json">
       <!-- build:css css/combined.css -->
       <!-- endbuild -->
@@ -45,6 +47,7 @@
       <script src="https://static.quantimo.do/js/ionIcons.js"></script> <!-- Needed for qmService to work -->
     <script src="js/qmLogger.js"></script>
     <script src="js/qmHelpers.js"></script>
+      <script src="js/human.js"></script>
     <script src="data/appSettings.js"></script> <!-- Must come after qmHelpers because we assign to qm.staticData -->
       <script src="data/qmStates.js"></script>
       <script src="data/stateNames.js"></script>
